# Qt6Template

./: .gitignore  CMakeLists.txt  main.cpp  qt6-mingw-x64.cmake  readme.md
